@@ -38,13 +38,11 @@ class ExtensionInfo {
 	/**
 	 * Obtains the full paths of COPYING or LICENSE files if they exist.
 	 *
-	 * @param string $extDir Path to the extensions root directory
-	 *
 	 * @since 1.35
-	 *
+	 * @param string $extDir Path to the extensions root directory
 	 * @return string[] Returns an array of zero or more paths.
 	 */
-	public static function getLicenseFileNames( $extDir ) {
+	public static function getLicenseFileNames( string $extDir ): array {
 		if ( !$extDir ) {
 			return [];
 		}
